--- a/reports/independentVars.Rmd
+++ b/reports/independentVars.Rmd
@@ -11,7 +11,7 @@ library(tidyverse)
 library(here)
 library(sf)
 library(units)
-source(here("R","functions-createVars.R"))
+source(here("R","functions.R"))
 ```
 
 # Checks
