--- a/reports/locality-maps.Rmd
+++ b/reports/locality-maps.Rmd
@@ -13,7 +13,7 @@ knitr::opts_chunk$set(echo = FALSE)
 library(here)
 library(tidyverse)
 library(sf)
-source(here("R","functions-createVars.R"))
+source(here("R","functions.R"))
 ```
 
 ```{r}
@@ -50,7 +50,6 @@ for (i in unique(DV$species)) { # i <- "Larix"
     IVij %>% 
       select(seeds.WALD, seeds.ExP, relelev, all_of(present)) %>% 
       plot(max.plot = mp)
-    op <- par(mfrow = c(1,3))
     DVij %>% 
       group_split(hgtclass) %>%
       walk(function(x) {
@@ -59,7 +58,6 @@ for (i in unique(DV$species)) { # i <- "Larix"
           select(wildlings) %>% 
           plot(main = hgtclass)
       })
-    par(op)
     cat('\n')
   }
 }
